creusot/tests/should_fail/result_param.stderr
warning: function `result_arg` is never used
 --> result_param.rs:6:4
  |
6 | fn result_arg(result: u32) {}
  |    ^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

error: `result` is not allowed as a parameter name
 --> result_param.rs:6:15
  |
6 | fn result_arg(result: u32) {}
  |               ^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

